# ChangeLog for media-gfx/gimageview
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimageview/ChangeLog,v 1.16 2005/04/08 19:59:39 cryos Exp $

  08 Apr 2005; Marcus D. Hanwell <cryos@gentoo.org>
  gimageview-0.2.27-r1.ebuild:
  Marked stable on amd64.

  08 Apr 2005; Markus Rothe <corsair@gentoo.org>
  gimageview-0.2.27-r1.ebuild:
  Stable on ppc64

  30 Mar 2005; Michael Hanselmann <hansmi@gentoo.org>
  gimageview-0.2.27-r1.ebuild:
  Stable on ppc.

  21 Mar 2005; Mamoru KOMACHI <usata@gentoo.org>
  gimageview-0.2.27-r1.ebuild:
  Stable on x86.

  05 Feb 2005; Mamoru KOMACHI <usata@gentoo.org>
  +files/gimageview-0.2.27-gtk12_fix.diff,
  +files/gimageview-0.2.27-sort_fix.diff, gimageview-0.2.27-r1.ebuild:
  Added patches to fix bug #78648.

*gimageview-0.2.27-r1 (19 Jan 2005)

  19 Jan 2005; Mamoru KOMACHI <usata@gentoo.org>
  +gimageview-0.2.27-r1.ebuild, -gimageview-0.2.27.ebuild:
  Corrected install directory.

*gimageview-0.2.27 (18 Jan 2005)

  18 Jan 2005; Mamoru KOMACHI <usata@gentoo.org> +gimageview-0.2.27.ebuild:
  Version bumped.

  04 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> gimageview-0.2.26.ebuild:
  Stable on x86 and ppc.

*gimageview-0.2.26 (06 Oct 2004)

  06 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> gimageview-0.2.25.ebuild,
  +gimageview-0.2.26.ebuild:
  Version bumped. Marked 0.2.25 stable on x86 and ppc.

  31 Jul 2004; Tom Gall <tgall@gentoo.org> gimageview-0.2.25.ebuild:
  stable on ppc64, bug #57127

  29 Jun 2004; Daniel Goller <morfic@gentoo.org> gimageview-0.2.25.ebuild:
  Added patch to allow compilation with gcc-3.4
  Thanks Bret Towe (Magnade), for the patch.
  This Closes #53693
  
  29 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> gimageview-0.2.25.ebuild:
  Marked ~amd64.

  24 Jun 2004; Aron Griffis <agriffis@gentoo.org> gimageview-0.2.25.ebuild:
  QA - fix use invocation

*gimageview-0.2.25 (23 May 2004)
